--- a/package.json
+++ b/package.json
@@ -9,13 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
+    "@babel/core": "^7.24.0",
+    "@expo/metro-runtime": "3.2.3",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-navigation/bottom-tabs": "6.6.1",
+    "@react-navigation/native": "6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "expo": "~51.0.38",
+    "expo-status-bar": "1.12.1",
+    "image-picker": "^0.3.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-checkbox": "2.0.0",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-zoom-viewer": "3.0.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "10.2.0",
+    "react-native-web": "0.19.10",
+    "expo-image-picker": "~15.0.7"
   },
   "private": true
 }
